Bug 883748 - Specialize MUrsh as double if needed. r=bhackett